# CIS-545-Project-TA-assignment

./: assign.ipynb  pyproject.toml  submission_metadata.csv  ta_assignment_selected_columns.csv  ta_assignment_summary.csv
