[tool.poetry]
name = "cis 545 project assignments"
version = "0.1.0"
description = ""
authors = ["stevensusas <hanqisu@sas.upenn.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
